:bento: added post adapter endpoint to docs
