# fastapi-master-api/app/api/manual_models/adapter_enums.py
@@ -1,0 +1,5 @@
+from enum import Enum
+
+
+class AdapterEnums(Enum):
+    mercedes_connected_car = "mercedes_connected_car"
