# fastapi-master-api/app/api/models/adapter.py
@@ -1,0 +1,36 @@
+# coding: utf-8
+
+from __future__ import annotations
+
+import re  # noqa: F401
+from datetime import date, datetime  # noqa: F401
+from typing import Any, Dict, List, Optional  # noqa: F401
+
+from app.api.models.adapter_enums import AdapterEnums
+from pydantic import AnyUrl, BaseModel, EmailStr, validator  # noqa: F401
+
+
+class Adapter(BaseModel):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+
+    Adapter - a model defined in OpenAPI
+
+        id: The id of this Adapter [Optional].
+        user_id: The user_id of this Adapter [Optional].
+        created_at: The created_at of this Adapter [Optional].
+        updated_at: The updated_at of this Adapter [Optional].
+        adapter: The adapter of this Adapter [Optional].
+        cron_expression: The cron_expression of this Adapter [Optional].
+    """
+
+    id: Optional[int] = None
+    user_id: Optional[int] = None
+    created_at: Optional[datetime] = None
+    updated_at: Optional[datetime] = None
+    adapter: Optional[AdapterEnums] = None
+    cron_expression: Optional[str] = None
+
+
+Adapter.update_forward_refs()
