# fastapi-master-api/app/api/models/adapter_enums.py
@@ -1,0 +1,22 @@
+# coding: utf-8
+
+from __future__ import annotations
+
+import re  # noqa: F401
+from datetime import date, datetime  # noqa: F401
+from typing import Any, Dict, List, Optional  # noqa: F401
+
+from pydantic import AnyUrl, BaseModel, EmailStr, validator  # noqa: F401
+
+
+class AdapterEnums(BaseModel):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+
+    AdapterEnums - a model defined in OpenAPI
+
+    """
+
+
+AdapterEnums.update_forward_refs()
