# fastapi-master-api/app/api/models/create_adapter.py
@@ -1,0 +1,28 @@
+# coding: utf-8
+
+from __future__ import annotations
+
+import re  # noqa: F401
+from datetime import date, datetime  # noqa: F401
+from typing import Any, Dict, List, Optional  # noqa: F401
+
+from app.api.models.adapter_enums import AdapterEnums
+from pydantic import AnyUrl, BaseModel, EmailStr, validator  # noqa: F401
+
+
+class CreateAdapter(BaseModel):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+
+    CreateAdapter - a model defined in OpenAPI
+
+        adapter: The adapter of this CreateAdapter.
+        cron_expression: The cron_expression of this CreateAdapter.
+    """
+
+    adapter: AdapterEnums
+    cron_expression: str
+
+
+CreateAdapter.update_forward_refs()
